--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@ P2PDB.o
 TCPClient.o
 TCPTracker.o
 tracker
+b.txt_chunks/1
+b.txt_chunks/10
+b.txt_chunks/11
+b.txt_chunks/12
+b.txt_chunks/13
+b.txt_chunks/2
+b.txt_chunks/3
+b.txt_chunks/4
+b.txt_chunks/5
+b.txt_chunks/6
+b.txt_chunks/7
+b.txt_chunks/8
+b.txt_chunks/9
